feat: encrypt
